# SimpleWebServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/SimpleWebServer/: server.hpp  utils.hpp
libs/: CMakeLists.txt
rfc-docs/rfc1945/: notes.md
src/: CMakeLists.txt  main.cpp  server.cpp  utils.cpp
tests/: CMakeLists.txt  test_catch2.cpp  test_main.cpp
